--- a/team.html
+++ b/team.html
@@ -136,7 +136,7 @@
       </div>
 
       <div class="w3-col w3-container w3-third teamPlace">
-        <div class="w3-center"><img src="Images/Logo/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo"></div>
+        <div class="w3-center w3-hide-small"><img src="Images/Logo/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo"></div>
       </div>
       
       <div class="w3-col w3-container w3-third teamPlace">
